<resources>
    <string name="app_name">TaskApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="profile">Profile</string>
    <string name="add">Введите имя</string>
    <string name="task">Task</string>
    <string name="get_started">get started</string>
    <string name="phone">Phone</string>
    <string name="google">Google</string>
    <string name="number">Number</string>
    <string name="verify">verify</string>
    <string name="code">code</string>
    <string name="accept">Accept</string>
    <string name="delete_account">Удалить аккаунт</string>
</resources>