<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.agn.taskapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_taskFragment2"
            app:destination="@id/taskFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.agn.taskapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.agn.taskapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/taskFragment"
        android:name="com.agn.taskapp.ui.task.TaskFragment"
        android:label="@string/task"
        tools:layout="@layout/fragment_task" >
        <argument
            android:name="task"
            android:defaultValue="@null"
            app:nullable="true"
            app:argType="com.agn.taskapp.model.Task"/>
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.agn.taskapp.ui.Profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="com.agn.taskapp.ui.onBoard.onBoardingFragment"
        android:label="fragment_on_boarding"
        tools:layout="@layout/fragment_on_boarding" />

    <fragment
        android:id="@+id/authFragment"
        android:name="com.agn.taskapp.ui.auth.AuthFragment"
        android:label="fragment_auth"
        tools:layout="@layout/fragment_auth" />

    <fragment
        android:id="@+id/verifyNumberFragment"
        android:name="com.agn.taskapp.ui.auth.verify.VerifyNumberFragment"
        android:label="fragment_verify_number"
        tools:layout="@layout/fragment_verify_number" />

    <fragment
        android:id="@+id/acceptCodeFragment"
        tools:layout="@layout/fragment_accept_code"
        android:name="com.agn.taskapp.ui.auth.accept.AcceptCodeFragment"
        android:label="AcceptCodeFragment" />
</navigation>